modify readme add key support

--- a/GoogleMap_Test/AndroidManifest.xml
+++ b/GoogleMap_Test/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="you api key" />
+            android:value="your api key" />
 
         <activity
             android:name="com.ai.googlemap.test.MainActivity"
